[gd_scene load_steps=7 format=3 uid="uid://bvi2s7fb40f70"]

[ext_resource type="Script" uid="uid://dcffy8jt6qlp0" path="res://scenes/content/laser.gd" id="1_a4anr"]
[ext_resource type="Texture2D" uid="uid://cdgyxn567ito6" path="res://assets/sprites/laser_particle.png" id="2_h07kg"]
[ext_resource type="Texture2D" uid="uid://b0xf7lc7id3mc" path="res://assets/sprites/laser_beam_particle.png" id="3_3234x"]

[sub_resource type="Curve" id="Curve_h07kg"]
_data = [Vector2(0.0454545, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_h07kg"]
colors = PackedColorArray(1, 1, 1, 1, 0.356863, 0, 0, 1)

[sub_resource type="Curve" id="Curve_ycumx"]
_data = [Vector2(0.0965909, 1), 0.0, 0.0, 0, 0, Vector2(0.323864, 0.191011), 0.0, 0.0, 0, 0]
point_count = 2

[node name="Laser" type="RayCast2D"]
modulate = Color(1.5, 1.5, 1.5, 1)
script = ExtResource("1_a4anr")

[node name="Line2D" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 0, 20)
width = 30.0
default_color = Color(0.890196, 0.141176, 0.180392, 1)

[node name="CastParticles" type="CPUParticles2D" parent="."]
emitting = false
texture = ExtResource("2_h07kg")
lifetime = 0.15
direction = Vector2(0, 1)
spread = 60.0
gravity = Vector2(0, 0)
initial_velocity_min = 600.0
initial_velocity_max = 1000.0
scale_amount_min = 0.2
scale_amount_max = 0.2
scale_amount_curve = SubResource("Curve_h07kg")
color = Color(1, 0, 0.113725, 1)
color_ramp = SubResource("Gradient_h07kg")

[node name="CollisionParticles" type="CPUParticles2D" parent="."]
rotation = 1.5708
emitting = false
texture = ExtResource("2_h07kg")
lifetime = 0.15
spread = 60.0
gravity = Vector2(0, 0)
initial_velocity_min = 400.0
initial_velocity_max = 1000.0
scale_amount_min = 0.2
scale_amount_max = 0.2
scale_amount_curve = SubResource("Curve_h07kg")
color = Color(1, 0, 0.113725, 1)
color_ramp = SubResource("Gradient_h07kg")

[node name="BeamParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 16
texture = ExtResource("3_3234x")
emission_shape = 3
emission_rect_extents = Vector2(1, 1)
direction = Vector2(0, 1)
initial_velocity_min = 400.0
initial_velocity_max = 500.0
scale_amount_min = 0.0
scale_amount_max = 0.05
scale_amount_curve = SubResource("Curve_ycumx")
color = Color(0.862745, 0.0784314, 0.235294, 1)
